--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,6 @@ p	{
 	background-color: red;
 	border-style: solid;
 	border-radius: 10px;
-	padding: 2px;
+	{border: 2px solid;
+		padding: 2px;
 }
