--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ h2 {border-style: dotted;
 }
 
 p	{
+	border-width: 25px
+	position: relative;
 	background-color: red;
 	border-style: solid;
 	border-radius: 10px;
