--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@ h2 {border-style: dotted;
 
 p	{
 	max-width: 30px;
-	background-color: red;
+	background-color: blue;
 	border-style: solid;
 	border-radius: 10px;
-	{border: 2px solid;
+	{border: 30px solid;
 		padding: 20px 30px;
 }
