--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,6 @@ p	{
 	background-color: blue;
 	border-style: solid;
 	border-radius: 10px;
-	{border: 30px solid;
+	border: 30px solid;
 		padding: 20px 30px;
 }
