--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,18 @@ body{
 
 h1 {
 	border-style: dotted;
-	border-width: 30px;
+	border-width: 20px;
 }
 
 h2 {border-style: dotted;
-	border-width: 30px;
+	border-width: 20px;
 }
 
 p	{
-	max-width: 30px;
+	max-width: 20px;
 	background-color: blue;
 	border-style: solid;
 	border-radius: 10px;
-	border: 30px solid;
-	padding: 15px 30px;
+	border: 20px solid;
+	padding: 5px;
 }
