--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,20 @@ body{
 
 h1 {
 	border-style: dotted;
-	border-width: 20px;
+	border-width: 2px;
 }
 
-h2 {border-style: dotted;
-	border-width: 20px;
+h2 {font-size: 25px;
+	border-style: dotted;
+	border-width: 2px;
 }
 
 p	{
-	max-width: 2px;
+	font-size: 20px;
+	max-width: 500px;
 	background-color: gray;
 	border-style: solid;
-	border-radius: 10px;
-	border: 2px solid;
-	padding: 15px;
+	border-radius: 20px;
+	border: 5px solid;
+	padding: 2px;
 }
